src/test/run-pass/extern-mod-abi.rs
extern "C" {
    fn pow(x: f64, y: f64) -> f64;
}

fn main() {}

