src/test/compile-fail/does-nothing.rs
// error-pattern: does nothing
fn main() {
  log "doing";
  this_does_nothing_what_the;
  log "boing";
}

